--- a/templates/base.html
+++ b/templates/base.html
@@ -2,37 +2,39 @@
 <html lang="en">
   <head>
     {% block title %}
-      <title>Local Library</title>
+      <title>Skeleton App</title>
     {% endblock %}
+    
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous" />
-    <!-- Add additional CSS in static file -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
   <body>
-    <div class="container-fluid">
+
       <div class="row">
         <div class="col-sm-2">
           {% block sidebar %}
-            <a href="{% url 'home' %}">Home</a>
             <ul class="sidebar-nav">
+              <p><a href="{% url 'home' %}">Home</a></p>
+              <p><a href="{% url 'about' %}">About</a></p>
               {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>
                 <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+                <li><a href="{% url 'loggedinpage' %}">Logged In Page</a></li>
               {% else %}
                 <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
               {% endif %}
             </ul>
           {% endblock %}
         </div>
-        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+        <div class="col-sm-10 ">
+          {% block content %}
+          {% endblock %}
+        </div>
       </div>
-    </div>
+
   </body>
 </html>
