--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
               <p><a href="{% url 'about' %}">About</a></p>
               {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>
-                <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
                 <li><a href="{% url 'loggedinpage' %}">Logged In Page</a></li>
               {% else %}
                 <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
