--- a/templates/base.html
+++ b/templates/base.html
@@ -11,30 +11,54 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="container">
 
       <div class="row">
-        <div class="col-sm-2">
-          {% block sidebar %}
-            <ul class="sidebar-nav">
-              <p><a href="{% url 'home' %}">Home</a></p>
-              <p><a href="{% url 'about' %}">About</a></p>
-              {% if user.is_authenticated %}
-                <li>User: {{ user.get_username }}</li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="{% url 'loggedinpage' %}">Logged In Page</a></li>
-              {% else %}
-                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-              {% endif %}
-            </ul>
-          {% endblock %}
+
+        <div class="ten columns">
+          <p>
+            <a href="{% url 'home' %}">Home</a> | 
+            <a href="{% url 'about' %}">About</a> | 
+          </p>
         </div>
-        <div class="col-sm-10 ">
+        <div class="two columns">
+            <h6>{{ user.get_username }}</h6>
+        </div>
+        <hr/>
+
+      </div>
+
+      <div class="row">
+
+        <div class="three columns">
+          {% if user.is_authenticated %}
+            <p><a href="{% url 'loggedinpage' %}">Logged In Page</a></p>
+            <p><a href="{% url 'record-list' %}">My Records</a></p>
+            <p><a href="{% url 'record-search' %}">Search My Records</a></p>
+            <p><a href="{% url 'logout' %}">Logout</a></p>
+          {% else %}
+            <p><a href="{% url 'login' %}?next={{ request.path }}">Login</a></p>
+          {% endif %}
+        </div>
+
+        <div class="nine columns">
           {% block content %}
           {% endblock %}
         </div>
+      
       </div>
+
+    </div>>
+
+    <script>
+      document.body.addEventListener('htmx:configRequest', (event) => {
+      event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+      })
+    </script>
 
   </body>
 </html>
