--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="ten columns">
           <p>
             <a href="{% url 'home' %}">Home</a> | 
-            <a href="{% url 'about' %}">About</a> | 
+            <a href="{% url 'about' %}">About</a>
           </p>
         </div>
         <div class="two columns">
