--- a/records/templates/records/record_detail.html
+++ b/records/templates/records/record_detail.html
@@ -2,20 +2,23 @@
 
 {% block content %}
 
-  <a href="{% url 'record-update' record.id %}">Update Record </a>  |  <a href="{% url 'record-delete' record.id %}"> Delete Record</a>
-  <br/>
-  <br/>
+<a href="{% url 'record-list' %}"><<< Back to Records</a>
+<br/>
+<br/>
 
-  <h1>Title: {{ record.title }}</h1>
+<h1>Title: {{ record.title }}</h1>
 
   <p><strong>Owner:</strong> {{ record.owner }}</p>
   <p><strong>Description:</strong> {{ record.description }}</p>
   <p><strong>Type:</strong> {{ record.get_type_display }}</p>
   <p><strong>Rating:</strong> {{ record.rating }}</p>
   <p><strong>Version:</strong> {{ record.version }}</p>
-
+  
   <br/>
   <br/>
-  <a href="{% url 'record-list' %}"><<< Back to Records</a>
+  
+  <!-- <a href="{% url 'record-update' record.id %}">Update Record </a>  |  <a href="{% url 'record-delete' record.id %}"> Delete Record</a> -->
+  <a class="button" href="{% url 'record-update' record.id %}">Update Record</a>
+  <a class="button button-primary" href="{% url 'record-delete' record.id %}">Delete Record</a>
 
 {% endblock %}
