--- a/records/templates/records/record_confirm_delete.html
+++ b/records/templates/records/record_confirm_delete.html
@@ -8,7 +8,8 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" value="Yes, delete." />
+  <a class="button" href="{% url 'record-details' record.id %}">Cancel</a>
+  <input type="submit" class="button-primary" value="Delete" />
 </form>
 
 {% endblock %}
